Alterações para Eventos

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "gl-ionic-background-video": "0.0.5",
     "ionic-angular": "^3.9.9",
+    "ngx-qrcode2": "^9.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
