--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@babel/compat-data": "^7.8.0",
     "@capacitor/core": "1.5.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/dialogs": "^5.27.0",
+    "@ionic-native/qr-scanner": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.5.4",
     "gl-ionic-background-video": "0.0.5",
     "ionic-angular": "^3.9.9",
@@ -74,7 +78,9 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-qrscanner": {},
+      "cordova-plugin-dialogs": {}
     },
     "platforms": [
       "android"
